# C-_WebServer

./: Dockerfile  README.md  build.sh  run.sh  run_default.sh  run_ports.sh  run_volume.sh
server/: CMakeLists.txt  main.cpp
server/public/: about.html  index.html
server/public/scripts/: main.js
server/public/styles/: styles.css
